--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionStrings": { "QLDuLich": "Server=DESKTOP-SENIEN8\\ANHNGUYET; Database=QLDuLich; Integrated Security = True; " },
+  "ConnectionStrings": { "QLDuLich": "Server=DESKTOP-SENIEN8\\ANHNGUYET; Database=QLTour; Integrated Security = True; " },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
